--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-flask
+Flask==3.1.2
+gunicorn==23.0.0
 tensorflow==2.20.0
-pillow
-firebase-admin
-requests
-gunicorn
+numpy==2.2.6
+Pillow==12.0.0
+requests==2.32.5
+firebase-admin==7.1.0
+h5py==3.15.1
